@@ -1,6 +1,9 @@
 Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul
 
 version 2.7.1 (??/??/????):
+	Pidgin:
+	* Restore the tray icon's blinking functionality.
+
 	Bonjour:
 	* Fix a crash on disconnect.
 
